Fixed Index Page to make links more visible.

--- a/css/main.css
+++ b/css/main.css
@@ -93,6 +93,7 @@ h1, h2, h3, h4, h5, h6 {
 table {
   font-family: sans-serif;
   border-collapse: collapse;
+  margin: auto;
 }
 
 table td, table th {
@@ -134,9 +135,9 @@ ul, ol {
   display: inline-block;
 }
 
-
 li {
   color: #90EE90;
+  text-align: left;
 }
 
 /* Paragraph */
